--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "clean": "rm config.json && rm -rf sketchtool-export node_modules && npm install",
     "export": "./sketchtool.sh",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:travis": "trevor"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-itp-base": "^1.1.0",
-    "jest": "^23.5.0"
+    "jest": "^23.5.0",
+    "trevor": "^2.3.0"
   },
   "author": "Thibault Maekelbergh <thibault.maekelbergh@icloud.com>",
   "dependencies": {
