--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:update": "npm run test -- --updateSnapshot",
-    "test:travis": "trevor"
+    "test:travis": "which docker > /dev/null && trevor"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
