--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
-language: node_js
-node_js:
-  - "8"
+matrix:
+  include:
+    # Javascript checks
+    - language: node_js
+      node_js:
+        - "8"
+      script:
+        - npm run lint
+        - npm test
 
-# TODO: add shellcheck as script
-script:
-  - npm test
+    # Shell checks
+    - language: shell
+      sudo: false
+      script:
+        - bash -c 'shopt -s globstar; shellcheck *.sh'
