Explicitly require scripts to be checked

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ matrix:
     - language: shell
       sudo: false
       script:
-        - bash -c 'shopt -s globstar; shellcheck *.sh'
+        - shellcheck sketchtool.sh sketchxport.sh
