--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": "itp-base",
-  "env": {
-    "jest": true
-  }
+  "extends": "./node_modules/@inthepocket/itp-react-scripts/dist/config/eslintrc.js"
 }
