Rename output file to sketchxport.json Instead of config.json

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   },
   "scripts": {
     "start": "node cli.js",
-    "clean": "rm config.json && rm -rf sketchtool-export node_modules && npm install",
+    "clean": "rm sketchxport.json && rm -rf sketchtool-export node_modules && npm install",
     "export": "./sketchtool.sh",
     "lint": "itp-react-scripts lint",
     "lint:fix": "npm run lint -- --fix",
     "lint:shell": "which shellcheck > /dev/null && shellcheck *.sh",
-    "generate:mocks": "npm start ./__mocks__/sample_sketchfile.sketch -- --dump && mv config.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
+    "generate:mocks": "npm start ./__mocks__/sample_sketchfile.sketch -- --dump && mv sketchxport.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:update": "npm run test -- --updateSnapshot",
