--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@inthepocket/itp-react-scripts": "^0.44.2",
     "eslint": "^5.5.0",
     "jest": "^23.5.0",
+    "lint-staged": "^7.2.2",
     "trevor": "^2.3.0"
   },
   "author": "Thibault Maekelbergh <thibault.maekelbergh@icloud.com>",
@@ -30,5 +31,13 @@
     "color-namer": "^1.3.0",
     "meow": "^5.0.0",
     "sketch2json": "^0.1.2"
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "npm run lint:fix"
+    ],
+    "**/*.sh": [
+      "npm run lint:shell"
+    ]
   }
 }
