--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "itp-react-scripts lint",
     "lint:fix": "npm run lint -- --fix",
     "lint:shell": "which shellcheck > /dev/null && shellcheck *.sh",
-    "generate:mocks": "npm start ./__mocks__/sample_sketchfile.sketch -- --dump && mv sketchxport.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
+    "generate:mocks": "npm start ./__mocks__/sample_sketchfile.sketch -- --dump --useColorArtboards && mv sketchxport.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:update": "npm run test -- --updateSnapshot",
