--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sketchxport",
-  "version": "0.2.0",
+  "name": "sketchxport-scripts",
+  "version": "1.0.0",
   "engines": {
     "node": ">=8.0"
   },
