--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ matrix:
     - language: shell
       sudo: false
       script:
-        - shellcheck sketchtool.sh sketchxport.sh
+        - shellcheck sketchtool.sh hubble.sh
