--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "sketchxport-scripts",
-  "version": "1.0.0",
+  "name": "hubble-scripts",
+  "version": "2.0.0",
   "engines": {
     "node": ">=8.0"
   },
   "bin": {
-    "sketchxport-cli": "./cli.js",
-    "sketchxport": "bash sketchxport.sh"
+    "hubble-cli": "./cli.js",
+    "hubble": "bash hubble.sh"
   },
   "scripts": {
     "start": "node cli.js",
-    "clean": "rm sketchxport.json && rm -rf sketchtool-export node_modules && npm install",
+    "clean": "rm hubble-data.json && rm -rf sketchtool-export node_modules && npm install",
     "export": "./sketchtool.sh",
     "lint": "itp-react-scripts lint",
     "lint:fix": "npm run lint -- --fix",
     "lint:shell": "which shellcheck > /dev/null && shellcheck *.sh",
-    "generate:mocks": "npm start ./__mocks__/sample_sketchfile.sketch -- --dump --useColorArtboards && mv sketchxport.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
+    "generate:mocks": "npm start ./__mocks__/sample_sketchfile.sketch -- --dump --useColorArtboards && mv hubble-data.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:update": "npm run test -- --updateSnapshot",
