Ignore this eslint rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/@inthepocket/itp-react-scripts/dist/config/eslintrc.js"
+  "extends": "./node_modules/@inthepocket/itp-react-scripts/dist/config/eslintrc.js",
+  "rules": {
+    "no-underscore-dangle": "off"
+  }
 }
