--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint": "itp-react-scripts lint",
     "lint:fix": "npm run lint -- --fix",
     "lint:shell": "which shellcheck > /dev/null && shellcheck *.sh",
-    "generate:mocks": "npm run start:artboards ./__mocks__/sample_sketchfile.sketch && mv hubble-data.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
+    "generate:mocks": "npm run generate:mocks:artboards && npm run generate:mocks:document",
+    "generate:mocks:artboards": "npm run start:artboards ./__mocks__/sample_sketchfile.sketch && mv hubble-data.json ./__mocks__/sample_output.json && mv logdump.json ./__mocks__/sample_dump.json",
+    "generate:mocks:document": "npm run start:document ./__mocks__/sample_sketchfile.sketch && mv hubble-data.json ./__mocks__/sample_output.document.json && mv logdump.json ./__mocks__/sample_dump.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:update": "npm run test -- --updateSnapshot",
