--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
 
   - language: ruby
     before_script: gem install awesome_bot
-    script: awesome_bot README.md --allow-redirect --allow-dupe
+    script: awesome_bot README.md --allow-redirect --allow-dupe -w "https://github.com/inthepocket/hubble-app"
 
 notifications:
   slack:
