--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 matrix:
   include:
-  - os: osx
-    osx_image: xcode10
-    language: node_js
+  - language: node_js
     node_js:
     - '8'
     script:
