Fix review issues

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start:styledictionary": "npm start -- --dump --useColorArtboards --useGradientArtboards --useStyleDictionaryOutput",
     "clean": "rm hubble-data.json && rm -rf sketchtool-export node_modules && npm install",
     "export": "./sketchtool.sh ./__mocks__/sample_sketchfile.sketch",
-    "lint": "itp-react-scripts lint",
+    "format": "itp-react-scripts format \"**/*.js\"",
+    "lint": "itp-react-scripts lint \"**/*.js\"",
     "lint:fix": "npm run lint -- --fix",
     "lint:shell": "which shellcheck > /dev/null && shellcheck *.sh",
     "generate:mocks": "npm run generate:mocks:artboards && npm run generate:mocks:document && npm run generate:mocks:styledictionary",
