--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,7 @@ jobs:
     executor: node
     steps:
       - checkout
+      - <<: *install_node_modules
       - run: npm run build
       - run: ./bin/hubble-cli --version
 
