--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
     executor: node
     steps:
       - checkout
+      - <<: *install_node_modules
       - run: bash generate_mocks.sh
 
   unit_tests_node_lts:
