--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,9 @@ jobs:
     steps:
       - checkout
       - <<: *install_node_modules
-      - run: npm run build
-      - run: chmod +x ./bin/hubble-cli
-      - run: ./bin/hubble-cli --version
+      - run: ./node_modules/.bin/pkg cli.js -t node8-macos-x86 --output ./bin/hubble-cli-x86
+      - run: ./node_modules/.bin/pkg cli.js -t node8-macos-x64 --output ./bin/hubble-cli-x64
+      - run: ./bin/hubble-cli-x86 --version
 
 workflows:
   version: 2
