--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,10 +69,8 @@ jobs:
     steps:
       - checkout
       - <<: *install_node_modules
-      - run: ./node_modules/.bin/pkg cli.js -t node8-macos-x86 --output ./bin/hubble-cli-x86
-      - run: ./node_modules/.bin/pkg cli.js -t node8-macos-x64 --output ./bin/hubble-cli-x64
-      - run: file ./bin/hubble-cli-x86 && file ./bin/hubble-cli-x64 && uname -m
-      - run: ./bin/hubble-cli-x86 --version
+      - run: ./node_modules/.bin/pkg cli.js -t node8-linux-x64 --output ./bin/hubble-cli
+      - run: ./bin/hubble-cli --version
 
 workflows:
   version: 2
