--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
   "devDependencies": {
     "@inthepocket/itp-react-scripts": "^0.48.1",
     "eslint": "^5.13.0",
+    "husky": "^3.0.4",
     "jest": "^23.6.0",
-    "lint-staged": "^8.1.4",
+    "lint-staged": "^8.2.1",
     "pkg": "^4.3.7"
   },
   "dependencies": {
