Add a configuration for publishing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,16 +91,12 @@ jobs:
       - image: cibuilds/github
     steps:
       - attach_workspace:
-          at: ./bin
-      - run: ls -l .
+          at: .
       - run:
-          name: List available binaries
-          command: ls -l ./bin/**/*
-      # - run:
-      #     name: Publish Github release
-      #     command: |
-      #       VERSION=$(./bin/hubble-cli-linux-x64 --version)
-      #       ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./bin/
+          name: Publish Github release
+          command: |
+            VERSION=$(./bin/hubble-cli-linux-x64 --version)
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./bin/
 
 workflows:
   version: 2
@@ -123,7 +119,13 @@ workflows:
           requires:
             - generate_mocks
             - unit_tests_node_lts
-      - publish_github_release:
+
+  publish_release:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
+      - publish_gitub_release:
           requires:
             - build
-
