Try and fix path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,12 +94,12 @@ jobs:
           at: .
       - run:
           name: List available artifacts
-          command: ls -l ./bin
+          command: ls -l bin/
       - run:
           name: Publish Github release
           command: |
-            VERSION=$(./bin/hubble-cli-linux-x64 --version)
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./bin/
+            VERSION="$(bin/hubble-cli-linux-x64 --version)"
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} bin/
 
 workflows:
   version: 2
