--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,11 +93,9 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          name: List available artifacts
-          command: ls -l bin/
-      - run:
           name: Publish Github release
           command: |
+            ls -l bin/
             VERSION="$(bin/hubble-cli-linux-x64 --version)"
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} bin/
 
