--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "color-namer": "^1.3.0",
     "figma-js": "^1.7.0",
     "meow": "^5.0.0",
+    "rimraf": "^3.0.2",
     "sketch2json": "^0.1.2",
     "unzipper": "^0.10.10"
   },
